<resources>
    <string name="app_name">GroceryListing</string>
    <string name="_1kg_price">1Kg, Price</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="pulses">Pulses</string>
    <string name="best_selling">Best Selling</string>
    <string name="see_all">See all</string>
    <string name="groceries">Groceries</string>
    <string name="exclusive_offer">Exclusive Offer</string>
    <string name="search_store">Search Store</string>
    <string name="grocery_store">Grocery-Store</string>
    <string name="_4_99">$4.99</string>
    <string name="organic_bananas">Organic Bananas</string>
</resources>