<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GroceryDetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        app:cardCornerRadius="15sp">

        <ImageView
            android:id="@+id/detailsImg"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:padding="40dp"
            android:src="@drawable/apple" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/detailsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/pulses"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="20"
            android:src="@drawable/heart"
            android:text="@string/pulses"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailsAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1kg_price" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:layout_height="0dp">

        <Button
            android:layout_width="match_parent"
            android:text="@string/add_to_basket"
            android:textAllCaps="false"
            android:background="#58b175"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>