<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="6sp"
            android:src="@drawable/carrot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_store"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:padding="8sp"
        android:layout_margin="14sp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="#F2F3F2"
        android:layout_height="50sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_action_search" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:hint="@string/search_store" />


    </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginTop="8dp"
        android:layout_margin="12dp"
        android:layout_height="wrap_content">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iss_auto_cycle="true"
            app:iss_period="1000"
            app:iss_error_image="@mipmap/ic_launcher"
            app:iss_delay="0"/>
    </androidx.cardview.widget.CardView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="0sp"
            android:layout_marginBottom="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/exclusive_offer"
                android:layout_weight="50"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/see_all"
                android:layout_weight="50"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="19sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/exclusive_recyclerview"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/exclusive_listitem"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="0sp"
            android:layout_marginBottom="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/groceries"
                android:layout_weight="50"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/see_all"
                android:layout_weight="50"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="19sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/groceries_recyclerview"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/groceries_listitem"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginTop="0sp"
            android:layout_marginBottom="12sp"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="12sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/best_selling"
                android:layout_weight="50"
                android:textStyle="bold"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/see_all"
                android:layout_weight="50"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="19sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/bestselling_recyclerview"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/exclusive_listitem"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>